# dicom-viewer

./: .gitignore  CMakeLists.txt  README.md  run.ps1
assets/: .gitkeep
assets/screenshots/: .gitkeep
src/: MainWindow.cpp  MainWindow.h  main.cpp
